fix margin on mobile version

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -2,9 +2,10 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  margin-bottom: 11vw;
   .about__text {
     width: 62vw;
-    margin-right: 20px;
+    margin-right: 5.3vw;
     font-size: 16px;
     line-height: 120%;
   }
