--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   padding-bottom: 30px;
   height: 100%;
+  margin-top: 20vw;
   .contact__main {
     width: 90vw;
     margin: 0 5.3vw;
