--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -11,7 +11,7 @@
 .projects__text {
   width: 62vw;
   font-size: 28px;
-  margin-right: 20px;
+  margin-right: 5.3vw;
   letter-spacing: -0.03em;
   margin-bottom: 28px;
   line-height: 120%;
@@ -130,6 +130,7 @@
   margin-top: 6px;
   margin-bottom: 23px;
   line-height: 120%;
+  width: 71vw;
 }
 
 @media only screen and (min-width: 768px) {
