--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -3,7 +3,7 @@
 .skills__block {
   margin-top: 10px;
   width: 100%;
-  padding-bottom: 20px;
+  padding-bottom: 11vw;
 }
 .skills__slide {
   display: flex;
