--- a/src/components/layout/Header/Header.scss
+++ b/src/components/layout/Header/Header.scss
@@ -34,7 +34,7 @@
   }
   .header__navMenu {
     background-color: $textColor;
-    width: 100%;
+    width: 100vw;
     height: 28vh;
     display: flex;
     justify-content: flex-start;
